argocd_helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mehmet-ingress
  namespace: mehmet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.localhost  # Local ortamda kullanmak için bir host belirle
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mehmet-service
            port:
              number: 80
